# ai-pdf-autofiller

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: PURPOSE.md  README.md  TESTING.md
samples/: README.md
scripts/: __init__.py  create_sample_form.py  run_tests.py  test_demo.py
src/doc_engine/: __init__.py  field_semantics.py  mapping.py  models.py  pdf_reader.py  pdf_writer.py
tests/: __init__.py  test_mapping.py  test_pdf_writer.py
